# order_book_server

./: Cargo.toml  README.md  sync.sh
contrib/: crontab  override_gossip_config.json  testnet_harness.py
deploy/nginx/: ws.borsa.cc.conf
deploy/systemd/: hl-coordinator.service  hl-visor.service  orderbook.service  ws-relay.service
monitoring/dashboards/: orderbook.json
relay/: Cargo.toml
relay/src/: main.rs  reducer.rs  upstream.rs
server/: Cargo.toml
server/src/: history.rs  lib.rs  metrics.rs
server/src/clearing_house/: api_leverage.rs  liquidation_map.rs  misc_events.rs  mod.rs  replica.rs  rmp_streaming.rs  state.rs
server/src/listeners/order_book/: mod.rs  state.rs
server/src/order_book/: levels.rs  mod.rs  multi_book.rs  types.rs
server/src/referral/: aggregator.rs  handlers.rs  mod.rs  referrer_tracker.rs  stats_db.rs
server/src/servers/: websocket_server.rs
server/src/strategy/: aggregator.rs  handlers.rs  mod.rs  stats_db.rs
server/src/types/: inner.rs  mod.rs  node_data.rs  subscription.rs
