[package]
name = "ws-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ws_relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
libc = "0.2"
